--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
         <label for="tauxImpot">Taux d'imposition à la source (%)</label>
         <input type="number" id="tauxImpot" value="0" min="0" max="100" step="0.1">
         <!-- Sélecteur de couleur -->
-        <center<div class="color-picker">
+      </center><div class="color-picker">
             <label for="couleurTheme">Couleur du thème :</label>
             <input type="color" id="couleurTheme" value="#ebf8ff">
-        </div><center>
+        </div>
           <div>
                <!-- Ajoutez ce bouton après le champ tauxImpot -->
 <center><button type="button" onclick="calculerTauxImpot()" style="margin-top: 7px; width: 200px;  width: 50%;">
