--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
         <label for="tauxImpot">Taux d'imposition à la source (%)</label>
         <input type="number" id="tauxImpot" value="0" min="0" max="100" step="0.1">
         <!-- Sélecteur de couleur -->
-      </center><div class="color-picker">
-            <label for="couleurTheme">Couleur du thème :</label>
-            <input type="color" id="couleurTheme" value="#ebf8ff">
+            <div class="color-picker">
+            <center><label for="couleurTheme">Couleur du thème :</label></center>
+            <center><input type="color" id="couleurTheme" value="#ebf8ff"></center>
         </div>
           <div>
                <!-- Ajoutez ce bouton après le champ tauxImpot -->
