--- a/index.html
+++ b/index.html
@@ -590,9 +590,7 @@ document.getElementById('nbEnfants').addEventListener('change', calculerTauxImpo
                 document.body.classList.toggle("dark-mode");
             });
         };
-    </script>
 
-<script>
     // Charger le fichier JSON
     async function chargerDonneesEntreprises() {
         const response = await fetch('entreprises.json');
@@ -638,12 +636,14 @@ document.getElementById('nbEnfants').addEventListener('change', calculerTauxImpo
     document.getElementById("siret").addEventListener("blur", remplirFormulaire);
 </script>
 
-
-
-
-
     
 
-</body></html>
+</body>
+
+</html>
+
+
+
+
 
 
