--- a/index.html
+++ b/index.html
@@ -96,22 +96,28 @@
       </style>
 </head>
   
-  
-   <center><h2>Informations Entreprise</h2>
-        <label for="nomEntreprise" class="required">Nom</label>
-        <input type="text" id="nomEntreprise" value="SOCIETE RUE ANONYME">
-        <label for="adresseEntreprise" class="required">Adresse complète</label>
-        <input type="text" id="adresseEntreprise" value="4 RUE DE LA PAIX, 75000 PARIS">
-        <label for="siret" class="required">SIRET</label>
-        <input type="text" id="siret" value="1234567890002">
-        <label for="codeNaf" class="required">Code NAF</label>
-        <input type="text" id="codeNaf" value="6202A">
-        <label for="telEntreprise" class="required">Téléphone</label>
-        <input type="text" id="telEntreprise" value="01 23 45 67 89">
-        <label for="faxEntreprise">Fax</label>
-        <input type="text" id="faxEntreprise" value="01 23 45 67 90">
-        <label for="emailEntreprise" class="required">Email</label>
-        <input type="email" id="emailEntreprise" value="contact@entreprise.com">
+<!-- Informations Entreprise -->
+<label for="nomEntreprise" class="required">Nom</label>
+<input type="text" id="nomEntreprise" value="">
+
+<label for="adresseEntreprise" class="required">Adresse complète</label>
+<input type="text" id="adresseEntreprise" value="">
+
+<label for="siret" class="required">SIRET</label>
+<input type="text" id="siret" value="">
+
+<label for="codeNaf" class="required">Code NAF</label>
+<input type="text" id="codeNaf" value="">
+
+<label for="telEntreprise" class="required">Téléphone</label>
+<input type="text" id="telEntreprise" value="">
+
+<label for="faxEntreprise">Fax</label>
+<input type="text" id="faxEntreprise" value="">
+
+<label for="emailEntreprise" class="required">Email</label>
+<input type="email" id="emailEntreprise" value="">
+
         <h2>Informations Salarié</h2>
         <label for="nomSalarie" class="required">Nom</label>
         <input type="text" id="nomSalarie" value="JEROME DUBOIS">
