--- a/index.html
+++ b/index.html
@@ -95,28 +95,29 @@
         }
       </style>
 </head>
-  
+<center>
+    
 <!-- Informations Entreprise -->
-<label for="nomEntreprise" class="required">Nom</label>
-<input type="text" id="nomEntreprise" value="">
+        <label for="nomEntreprise" class="required">Nom</label>
+        <input type="text" id="nomEntreprise" value="">
 
-<label for="adresseEntreprise" class="required">Adresse complète</label>
-<input type="text" id="adresseEntreprise" value="">
+        <label for="adresseEntreprise" class="required">Adresse complète</label>
+        <input type="text" id="adresseEntreprise" value="">
 
-<label for="siret" class="required">SIRET</label>
-<input type="text" id="siret" value="">
+        <label for="siret" class="required">SIRET</label>
+        <input type="text" id="siret" value="">
 
-<label for="codeNaf" class="required">Code NAF</label>
-<input type="text" id="codeNaf" value="">
+        <label for="codeNaf" class="required">Code NAF</label>
+        <input type="text" id="codeNaf" value="">
 
-<label for="telEntreprise" class="required">Téléphone</label>
-<input type="text" id="telEntreprise" value="">
+        <label for="telEntreprise" class="required">Téléphone</label>
+        <input type="text" id="telEntreprise" value="">
 
-<label for="faxEntreprise">Fax</label>
-<input type="text" id="faxEntreprise" value="">
+        <label for="faxEntreprise">Fax</label>
+        <input type="text" id="faxEntreprise" value="">
 
-<label for="emailEntreprise" class="required">Email</label>
-<input type="email" id="emailEntreprise" value="">
+        <label for="emailEntreprise" class="required">Email</label>
+        <input type="email" id="emailEntreprise" value="">
 
         <h2>Informations Salarié</h2>
         <label for="nomSalarie" class="required">Nom</label>
@@ -161,7 +162,7 @@
         <div class="color-picker">
             <label for="couleurTheme">Couleur du thème :</label>
             <input type="color" id="couleurTheme" value="#ebf8ff">
-        </div>
+        </div></center>  
           <div>
                <!-- Ajoutez ce bouton après le champ tauxImpot -->
 <center><button type="button" onclick="calculerTauxImpot()" style="margin-top: 7px; width: 200px;  width: 80%;">
