--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             background: #2b6cb0;
             color: white;
             border: none;
-            border-radius: 7px;
+            border-radius: 50px;
             cursor: pointer;
             font-size: 15px;
             margin-top: 15px;
             display: block;
-            width: 80%;
+            width: 70%;
             transition: background-color 0.3s;
         }
         button:hover {
@@ -165,7 +165,7 @@
         </div></center>  
           <div>
                <!-- Ajoutez ce bouton après le champ tauxImpot -->
-<center><button type="button" onclick="calculerTauxImpot()" style="margin-top: 7px; width: 200px;  width: 80%;">
+<button type="button" onclick="calculerTauxImpot()" style="margin-top: 7px; width: 200px;  width: 80%;">
  Calculer imposition
 </button>
 <small id="helpImpot" style="display:block; margin-top:6px; color:#666;">Estimé sur un brut annuel de 28719.60 € (1 part) — Impôt total estimé : 1600.79 €</small>
