--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
         <div class="color-picker">
             <label for="couleurTheme">Couleur du thème :</label>
             <input type="color" id="couleurTheme" value="#ebf8ff">
-        </div></center>  
-          <div>
+        </div>
+          <center><div>
                <!-- Ajoutez ce bouton après le champ tauxImpot -->
-<center></center><button type="button" onclick="calculerTauxImpot()" style="margin-top: 7px; width: 200px;  width: 70%;">
+<button type="button" onclick="calculerTauxImpot()" style="margin-top: 7px; width: 200px;  width: 70%;">
  Calculer imposition
-<center></center></button>
+</button>
 <small id="helpImpot" style="display:block; margin-top:6px; color:#666;">Estimé sur un brut annuel de 28719.60 € (1 part) — Impôt total estimé : 1600.79 €</small>
-
+     </div>
 <script>
 // Tranches officielles 2025
 const TRANCHES_IMPOT = [
